--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.10"
+bevy_ecs_tilemap = "0.10.0"
 leafwing-input-manager = "0.9.1"
 rand = "0.8.5"
 seldom_fn_plugin = "0.3.0"
