--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ editor = ["bevy_editor_pls"]
 bevy = "0.10"
 bevy_ecs_tilemap = { git = "https://github.com/IsseW/bevy_ecs_tilemap", features = ["lights"] }
 bevy_editor_pls = { version = "0.4.0", optional = true }
+bytemuck = { version = "1.13.1", features = ["derive"] }
 enum-map = "2.5.0"
+fixedbitset = "0.4.2"
 leafwing-input-manager = "0.9.1"
 rand = { version = "0.8.5", features = ["small_rng"] }
 seldom_fn_plugin = "0.3.0"
