--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ editor = ["bevy_editor_pls"]
 
 [dependencies]
 bevy = "0.10"
-bevy_ecs_tilemap = { git = "https://github.com/IsseW/bevy_ecs_tilemap", features = ["lights"] }
+bevy_ecs_tilemap = { git = "https://github.com/IsseW/bevy_ecs_tilemap", features = ["lights", "atlas"] }
 bevy_editor_pls = { version = "0.4.0", optional = true }
 bytemuck = { version = "1.13.1", features = ["derive"] }
 enum-map = "2.5.0"
