--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bevy = "0.10"
 bevy_ecs_tilemap = { git = "https://github.com/IsseW/bevy_ecs_tilemap", features = ["lights", "atlas"] }
 bevy_editor_pls = { version = "0.4.0", optional = true }
 bevy_kira_audio = "0.15.0"
+bitmatch = "0.1.1"
 bytemuck = { version = "1.13.1", features = ["derive"] }
 enum-map = "2.5.0"
 fixedbitset = "0.4.2"
