--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ fixedbitset = "0.4.2"
 leafwing-input-manager = "0.9.1"
 rand = { version = "0.8.5", features = ["small_rng"] }
 seldom_fn_plugin = "0.3.0"
+seldom_state = "0.5"
 vek = "0.15.10"
 
 [profile.release]
