Getting ready for release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ vek = "0.15.10"
 codegen-units = 1
 debug = false
 lto = "thin"
-opt-level = 3
+opt-level = "z"
 panic = "abort"
 
 [profile.dev.package."*"]
